Fixing spacing issues in main navigation

--- a/gameon/base/static/base/css/master.css
+++ b/gameon/base/static/base/css/master.css
@@ -233,6 +233,8 @@ nav ul {
     margin: 0;
     float: left;
     font-size: 14px;
+    line-height: 1.4em;
+    background: red;
 }
 nav li {
     float: left;
